# tutorial-local-llm

./: README.md  environment.yml  pyproject.toml  requirements.txt
modelfiles/: calculator.modelfile  luigi.modelfile  phi3-4b.modelfile  sentiment2.modelfile  tinyllama-q4.modelfile
originals/: 01-Tutorial Introduction.ipynb  02-Serve Local LLMs.ipynb  03-Hugging Face Ecosystem.ipynb  04-Multimodel and Structured Data.ipynb  99-ScratchPad.ipynb
